打包方式变更